Added classes for testing